# pytest-param-priority

./: .gitignore  pyproject.toml
src/pytest_param_priority/: __init__.py  param_priority.py  plugin.py
tests/: test_param_priority.py
