[tool.poetry]
name = "pytest-param-priority"
version = "0.2.0"
description = "A test ordering plugin that allows defining parameter priorities."
authors = ["Victor Maryama <victor.maryama@gmail.com>"]
maintainers = ["Victor Maryama <victor.maryama@gmail.com>"]
repository = "https://github.com/Sup3rGeo/pytest-param-priority"
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins.pytest11]
pytest_param_priority = "pytest_param_priority.plugin"